# trace-regression-harness

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  pyproject.toml  requirements.txt
.github/workflows/: trace-check.yaml
cli/: main.py
cmd/tracecheck/: main.go
examples/policies/: budget.json  safety.json
pkg/: __init__.py
pkg/evaluator/: runner.py
pkg/models/: assertion.py
pkg/policy/: builtin.go  builtin_test.go  loader.go  loader_test.go  policy.go
pkg/report/: report.go
pkg/reports/: formatter.py
pkg/rules/: engine.py
pkg/trace/: reader.go  reader_test.go
tests/: conftest.py  test_engine.py  test_formatter.py  test_models.py  test_runner.py
